Java 17/JUnit 5 Update