@@ -16,24 +16,16 @@
    <dependencyManagement>
       <dependencies>
          <dependency>
-            <groupId>org.wildfly.bom</groupId>
-            <artifactId>wildfly-javaee8</artifactId>
-            <version>14.0.1.Final</version>
-            <type>pom</type>
+            <groupId>org.jboss.arquillian</groupId>
+            <artifactId>arquillian-bom</artifactId>
+            <version>1.7.0.Alpha14</version>
             <scope>import</scope>
+            <type>pom</type>
          </dependency>
-
          <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-bom</artifactId>
-            <version>3.1.3</version>
-            <scope>import</scope>
-            <type>pom</type>
-         </dependency>
-         <dependency>
-            <groupId>org.jboss.arquillian</groupId>
-            <artifactId>arquillian-bom</artifactId>
-            <version>1.4.1.Final</version>
+            <version>3.1.4</version>
             <scope>import</scope>
             <type>pom</type>
          </dependency>
@@ -42,34 +34,41 @@
 
    <dependencies>
       <dependency>
-         <groupId>javax.enterprise</groupId>
-         <artifactId>cdi-api</artifactId>
-         <scope>provided</scope>
+         <groupId>jakarta.platform</groupId>
+         <artifactId>jakarta.jakartaee-api</artifactId>
+         <version>10.0.0</version>
       </dependency>
 
       <dependency>
          <groupId>org.primefaces</groupId>
          <artifactId>primefaces</artifactId>
-         <version>7.0</version>
+         <version>10.0.0</version>
+         <classifier>jakarta</classifier>
       </dependency>
 
       <!-- Test dependencies -->
       <dependency>
-         <groupId>org.testcontainers</groupId>
-         <artifactId>testcontainers</artifactId>
-         <version>${testcontainers.version}</version>
+         <groupId>org.junit.jupiter</groupId>
+         <artifactId>junit-jupiter</artifactId>
+         <version>5.9.2</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.wildfly.arquillian</groupId>
+         <artifactId>wildfly-arquillian-container-remote</artifactId>
+         <version>5.0.0.Alpha6</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.arquillian.junit5</groupId>
+         <artifactId>arquillian-junit5-container</artifactId>
          <scope>test</scope>
       </dependency>
 
       <dependency>
-         <groupId>org.wildfly</groupId>
-         <artifactId>wildfly-arquillian-container-remote</artifactId>
-         <version>8.2.1.Final</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.arquillian.junit</groupId>
-         <artifactId>arquillian-junit-container</artifactId>
+         <groupId>org.testcontainers</groupId>
+         <artifactId>testcontainers</artifactId>
+         <version>${testcontainers.version}</version>
          <scope>test</scope>
       </dependency>
 
@@ -82,9 +81,34 @@
       <dependency>
          <groupId>org.jboss.arquillian.graphene</groupId>
          <artifactId>graphene-webdriver</artifactId>
-         <version>2.3.2</version>
+         <version>2.5.4</version>
          <type>pom</type>
          <scope>test</scope>
       </dependency>
    </dependencies>
+
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+               <compilerArgs>
+                  <arg>--add-opens</arg>
+                  <arg>java.base/java.lang=ALL-UNNAMED</arg>
+               </compilerArgs>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0</version>
+            <configuration>
+               <useModulePath>false</useModulePath>
+               <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 </project>
