@@ -16,14 +16,14 @@
          <dependency>
             <groupId>org.jboss.arquillian</groupId>
             <artifactId>arquillian-bom</artifactId>
-            <version>1.1.11.Final</version>
+            <version>1.7.0.Alpha14</version>
             <scope>import</scope>
             <type>pom</type>
          </dependency>
          <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-bom</artifactId>
-            <version>2.2.2</version>
+            <version>3.1.4</version>
             <scope>import</scope>
             <type>pom</type>
          </dependency>
@@ -34,42 +34,41 @@
 
       <!-- Project dependencies -->
       <dependency>
+         <groupId>jakarta.platform</groupId>
+         <artifactId>jakarta.jakartaee-api</artifactId>
+         <version>10.0.0</version>
+      </dependency>
+      <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-core</artifactId>
-         <version>5.2.1.Final</version>
+         <version>6.1.7.Final</version>
          <scope>provided</scope>
       </dependency>
 
       <dependency>
-         <groupId>mysql</groupId>
-         <artifactId>mysql-connector-java</artifactId>
-         <version>5.1.39</version>
+         <groupId>org.mariadb.jdbc</groupId>
+         <artifactId>mariadb-java-client</artifactId>
+         <version>2.7.4</version>
          <scope>provided</scope>
       </dependency>
 
-      <dependency>
-         <groupId>javax</groupId>
-         <artifactId>javaee-api</artifactId>
-         <version>7.0</version>
-         <scope>provided</scope>
-      </dependency>
 
       <!-- Test dependencies -->
       <dependency>
-         <groupId>org.wildfly</groupId>
-         <artifactId>wildfly-arquillian-container-remote</artifactId>
-         <version>8.2.1.Final</version>
+         <groupId>org.junit.jupiter</groupId>
+         <artifactId>junit-jupiter</artifactId>
+         <version>5.9.2</version>
          <scope>test</scope>
-         <exclusions>
-            <exclusion>
-               <groupId>sun.jdk</groupId>
-               <artifactId>jconsole</artifactId>
-            </exclusion>
-         </exclusions>
       </dependency>
       <dependency>
-         <groupId>org.jboss.arquillian.junit</groupId>
-         <artifactId>arquillian-junit-container</artifactId>
+         <groupId>org.wildfly.arquillian</groupId>
+         <artifactId>wildfly-arquillian-container-remote</artifactId>
+         <version>5.0.0.Alpha6</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.arquillian.junit5</groupId>
+         <artifactId>arquillian-junit5-container</artifactId>
          <scope>test</scope>
       </dependency>
 
@@ -83,14 +82,7 @@
       <dependency>
          <groupId>org.dbunit</groupId>
          <artifactId>dbunit</artifactId>
-         <version>2.6.0</version>
-         <scope>test</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>org.apache.maven</groupId>
-         <artifactId>maven-model</artifactId>
-         <version>3.6.0</version>
+         <version>2.7.3</version>
          <scope>test</scope>
       </dependency>
 
@@ -101,4 +93,28 @@
       </dependency>
    </dependencies>
 
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+               <compilerArgs>
+                  <arg>--add-opens</arg>
+                  <arg>java.base/java.lang=ALL-UNNAMED</arg>
+               </compilerArgs>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0</version>
+            <configuration>
+               <useModulePath>false</useModulePath>
+               <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 </project>
